Fix alignment issue with header

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 500px;
+    padding: 10px 445px;
     font-size: 24px;
     margin: 0px;
     flex: 1 0 10px;
